# StellarSplit

backend/: .env.example  jest.config.js  package-lock.json  package.json
backend/src/export/: export-download.responder.ts  export.controller.ts
backend/src/modules/health/: health-check.service.ts  (+2 more)
backend/src/ocr/: ocr-queue.service.ts  ocr-worker.pool.ts  ocr.module.ts  ocr.service.ts
backend/src/recurring-splits/: recurring-splits.scheduler.spec.ts  recurring-splits.scheduler.ts
backend/src/websocket/: payment.gateway.spec.ts
contracts/: Cargo.toml  README.md
contracts/achievement-badges/src/: eligibility.rs  lib.rs  storage.rs  test.rs
contracts/dispute-resolution/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/flash-loan/src/: errors.rs  lib.rs  test.rs
contracts/path-payment/: SWAP_FAILURE_EVENTS.md
contracts/path-payment/src/: lib.rs  storage.rs  types.rs
contracts/reminder/: Cargo.toml
contracts/reminder/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/scripts/: ci-contracts.sh
contracts/split-escrow/src/: events.rs  lib.rs  test.rs  types.rs
contracts/split-template/src/: id.rs  lib.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: event_assertions.rs  lib.rs  test.rs
docs/: contracts-status.md
frontend/: package-lock.json
frontend/public/: offline.html  sw.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Navbar.tsx  SIdebar.tsx
frontend/src/services/: collaborationClient.ts
frontend/src/store/: notifications.ts  serviceWorkerStore.ts
frontend/src/utils/: sw-register.ts
(+11 files in other folders)
