[workspace]
resolver = "2"

members = [
    "achievement-badges",
    "flash-loan",
    "dispute-resolution",
    "path-payment",
    "split-template",
    "staking",
    "reminder",
]
# Experimental / broken/in-progress crates are excluded from the workspace.
exclude = [
    "multi-sig-splits",
    "split-escrow",
]

[workspace.dependencies]
soroban-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
